<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FullScreenImageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/FullScreenImage"
        android:layout_width="396dp"
        android:layout_height="307dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/viewCaption"
        android:layout_width="359dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullScreenImage"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/myComment"
        android:layout_width="299dp"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/what_do_you_think"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/commentButton"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="78dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="44dp"
        android:onClick="sendComment"
        android:text="@string/shot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments"
        android:layout_width="379dp"
        android:layout_height="206dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/CommentsBar"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/comments"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/delete"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:background="#51A7B3"
        android:drawableBottom="@android:drawable/ic_menu_delete"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:onClick="deletePhoto"
        app:layout_constraintBottom_toBottomOf="@+id/CommentsBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CommentsBar" />
</androidx.constraintlayout.widget.ConstraintLayout>